--- a/Sika-Common/Sika-Security/pom.xml
+++ b/Sika-Common/Sika-Security/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Sika</artifactId>
+        <artifactId>Sika-Common</artifactId>
         <groupId>cc.sika</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <modules>
-        <module>Sika-Security</module>
-        <module>Sika-Common-Swagger</module>
-    </modules>
-
-    <artifactId>Sika-Common</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>Sika-Security</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -23,6 +17,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <description>Sika 通用模块</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+            <version>2.2.5.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 </project>
