--- a/Sika-Common/Sika-Common-Swagger/src/main/resources/META-INF/spring/spring-configuration-metadata.json
+++ b/Sika-Common/Sika-Common-Swagger/src/main/resources/META-INF/spring/spring-configuration-metadata.json
@@ -16,8 +16,7 @@
       "name": "swagger.base-package",
       "type": "java.lang.String",
       "description": "swagger会解析的包路径",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.base-path",
@@ -29,29 +28,25 @@
       "name": "swagger.contact.email",
       "type": "java.lang.String",
       "description": "联系人email",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact"
     },
     {
       "name": "swagger.contact.name",
       "type": "java.lang.String",
       "description": "联系人",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact"
     },
     {
       "name": "swagger.contact.url",
       "type": "java.lang.String",
       "description": "联系人url",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact"
     },
     {
       "name": "swagger.description",
       "type": "java.lang.String",
       "description": "描述",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.enabled",
@@ -69,43 +64,37 @@
       "name": "swagger.host",
       "type": "java.lang.String",
       "description": "host信息",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.license",
       "type": "java.lang.String",
       "description": "许可证",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.license-url",
       "type": "java.lang.String",
       "description": "许可证URL",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.terms-of-service-url",
       "type": "java.lang.String",
       "description": "服务条款URL",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.title",
       "type": "java.lang.String",
       "description": "标题",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     },
     {
       "name": "swagger.version",
       "type": "java.lang.String",
       "description": "版本",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
-      "defaultValue": ""
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
     }
   ],
   "hints": []
