--- a/Sika-Common/Sika-Common-Swagger/src/main/resources/META-INF/spring-configuration-metadata.json
+++ b/Sika-Common/Sika-Common-Swagger/src/main/resources/META-INF/spring-configuration-metadata.json
@@ -16,7 +16,8 @@
       "name": "swagger.base-package",
       "type": "java.lang.String",
       "description": "swagger会解析的包路径",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.base-path",
@@ -28,25 +29,29 @@
       "name": "swagger.contact.email",
       "type": "java.lang.String",
       "description": "联系人email",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact",
+      "defaultValue": "2235569493@qq.com"
     },
     {
       "name": "swagger.contact.name",
       "type": "java.lang.String",
       "description": "联系人",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact",
+      "defaultValue": "小吴来哩"
     },
     {
       "name": "swagger.contact.url",
       "type": "java.lang.String",
       "description": "联系人url",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties$Contact",
+      "defaultValue": "http:\/\/ironcentury.cc"
     },
     {
       "name": "swagger.description",
       "type": "java.lang.String",
       "description": "描述",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.enabled",
@@ -64,37 +69,43 @@
       "name": "swagger.host",
       "type": "java.lang.String",
       "description": "host信息",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.license",
       "type": "java.lang.String",
       "description": "许可证",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.license-url",
       "type": "java.lang.String",
       "description": "许可证URL",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.terms-of-service-url",
       "type": "java.lang.String",
       "description": "服务条款URL",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.title",
       "type": "java.lang.String",
       "description": "标题",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     },
     {
       "name": "swagger.version",
       "type": "java.lang.String",
       "description": "版本",
-      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties"
+      "sourceType": "cc.sika.common.swagger.config.SwaggerProperties",
+      "defaultValue": ""
     }
   ],
   "hints": []
