--- a/Sika-Modules/pom.xml
+++ b/Sika-Modules/pom.xml
@@ -30,6 +30,14 @@
             <artifactId>Sika-Common-Swagger</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
