--- a/Sika-Modules/SIka-QuestionBank/src/main/resources/application.yaml
+++ b/Sika-Modules/SIka-QuestionBank/src/main/resources/application.yaml
@@ -13,17 +13,17 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/sika?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: wjc52292
+    password: ******
   # redis 配置
   redis:
     # 地址
-    host: 192.168.0.102
+    host: 192.168.*.*
     # 端口，默认为6379
     port: 6379
     # 数据库索引
     database: 0
     # 密码
-    password: wjc52292
+    password: ******
     # 连接超时时间
     timeout: 10s
     lettuce:
@@ -38,7 +38,7 @@ spring:
         max-wait: -1ms
   mvc:
     pathmatch:
-      matching-strategy: ant_path_matcher # SpringBoot 2.6.x 版本于Swagger不兼容问题
+      matching-strategy: ant_path_matcher # SpringBoot 2.6.x 版本与Swagger不兼容问题
 
 
 # MyBatis配置
