--- a/Sika-Modules/SIka-QuestionBank/src/main/resources/application.yaml
+++ b/Sika-Modules/SIka-QuestionBank/src/main/resources/application.yaml
@@ -1,29 +1,42 @@
-# 日志配置
-logging:
-  level:
-    cc.sika: debug
-    org.springframework: warn
-
-# Spring配置
+# 开发环境配置
+server:
+  # 服务器的HTTP端口，默认为8080
+  port: 8104
+  servlet:
+    # 应用的访问路径
+    context-path: /
+  tomcat:
+    # tomcat的URI编码
+    uri-encoding: UTF-8
+    # 连接数满后的排队数，默认为100
+    accept-count: 1000
+    threads:
+      # tomcat最大线程数，默认为200
+      max: 800
+      # Tomcat启动初始化的线程数，默认值10
+      min-spare: 100
 spring:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher # SpringBoot 2.6.x 版本与Swagger不兼容问题
   profiles:
     active: dev
-  # MySQL
+  # MySQL 配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/sika?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
-    password: ******
+    password: wjc52292
   # redis 配置
   redis:
     # 地址
-    host: 192.168.*.*
+    host: 192.168.0.102
     # 端口，默认为6379
     port: 6379
     # 数据库索引
     database: 0
     # 密码
-    password: ******
+    password: wjc52292
     # 连接超时时间
     timeout: 10s
     lettuce:
@@ -36,28 +49,3 @@ spring:
         max-active: 8
         # #连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: -1ms
-  mvc:
-    pathmatch:
-      matching-strategy: ant_path_matcher # SpringBoot 2.6.x 版本与Swagger不兼容问题
-
-
-# MyBatis配置
-mybatis:
-  # 搜索指定包别名
-  typeAliasesPackage: cc.sika.api.domain
-  # 配置mapper的扫描，找到所有的mapper.xml映射文件
-  mapperLocations: classpath*:mapper/**/*Mapper.xml
-  # 加载全局的配置文件
-  configLocation: classpath:mybatis/mybatis-config.xml
-
-swagger:
-  enabled: true
-  title: "Sika-Question接口文档"
-  version: 1.0
-  base-path: "/**"
-  description: "问题操作相关接口"
-  contact:
-    email: 2235569493@qq.com
-    name: 小吴来哩!
-    url: http://ironcentury.cc
-
