--- a/Sika-Common/Sika-Security/pom.xml
+++ b/Sika-Common/Sika-Security/pom.xml
@@ -18,6 +18,17 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>cc.sika</groupId>
+            <artifactId>Sika-Common-Swagger</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-captcha</artifactId>
+            <version>5.8.12</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -47,6 +58,10 @@
         <!--            <artifactId>spring-boot-configuration-processor</artifactId>-->
         <!--            <optional>true</optional>-->
         <!--        </dependency>-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
