--- a/Sika-Common/Sika-Security/src/main/resources/application.yaml
+++ b/Sika-Common/Sika-Security/src/main/resources/application.yaml
@@ -13,11 +13,11 @@ spring:
   # MySQL
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/sika?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/sika-auth?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
     username: root
     password: wjc52292
   redis:
-    host: 192.168.0.102
+    host: 43.139.39.172
     port: 6379
     password: wjc52292
     database: 0
@@ -32,9 +32,21 @@ spring:
         max-active: 8
         # #连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: -1ms
+  application:
+    name: security-service
+  cloud:
+    nacos:
+      discovery:
+        enabled: true
+        server-addr: 43.139.39.172:8848
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 logging:
   level:
     cc.sika.common.security.*: debug
+
 
 cc:
   token:
@@ -67,4 +79,6 @@ cc:
           - "cc:common:all"
           - "cc:question:all"
           - "cc:question:get"
-
+swagger:
+  enabled: true
+  base-package: cc.sika.common.security.controller
