--- a/Sika-Modules/Sika-Upload/src/main/resources/bootstrap.yaml
+++ b/Sika-Modules/Sika-Upload/src/main/resources/bootstrap.yaml
@@ -4,4 +4,5 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: 192.168.0.102:8848
+        server-addr: 43.139.39.172:8848
+#        server-addr: 192.168.0.102:8848
